--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">POCVirginiaLottery</string>
-    <string name="show">Show Retailers</string>
+    <string name="show">Show All Retailers</string>
     <string name="title_activity_maps">Map</string>
+    <string name="search">Search by Zipcode</string>
 </resources>
